--- a/thesis/macros.tex
+++ b/thesis/macros.tex
@@ -40,6 +40,9 @@
 \DeclareMathOperator{\multihead}{Multihead}
 \DeclareMathOperator{\concat}{concat}
 
+\DeclarePairedDelimiter\ceil{\lceil}{\rceil}
+\DeclarePairedDelimiter\floor{\lfloor}{\rfloor}
+
 %%% Transposition of a vector/matrix
 \newcommand{\T}[1]{#1^\top}
 
