--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -65,6 +65,7 @@
 \usepackage{algorithmicx}
 \usepackage{algorithm}
 \usepackage{algpseudocode}
+\usepackage{mathtools}
 
 \usepackage[acronym]{glossaries}
 \usepackage[shortcuts=ac,automake]{glossaries-extra}
