--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -1,4 +1,3 @@
-
 @book{koehn2009statistical,
     author        = {Koehn, Philipp},
     title         = {Statistical machine translation},
@@ -236,18 +235,6 @@ author={
       primaryClass={cs.CL}
 }
 
-@inproceedings{germann2020university,
-    title = "The {U}niversity of {E}dinburgh{'}s submission to the {G}erman-to-{E}nglish and {E}nglish-to-{G}erman Tracks in the {WMT} 2020 News Translation and Zero-shot Translation Robustness Tasks",
-    author = "Germann, Ulrich",
-    booktitle = "Proceedings of the Fifth Conference on Machine Translation",
-    month = nov,
-    year = "2020",
-    address = "Online",
-    publisher = "Association for Computational Linguistics",
-    url = "https://www.aclweb.org/anthology/2020.wmt-1.18",
-    pages = "197--201",
-}
-
 @article{qian2020glancing,
   title =	 {Glancing Transformer for Non-Autoregressive Neural Machine
                   Translation},
@@ -343,43 +330,6 @@ author={
   month={May},
   pages={13727-13735}}
 
-
-@inproceedings{ma2019flowseq,
-  title =	 "{F}low{S}eq: Non-Autoregressive Conditional Sequence
-                  Generation with Generative Flow",
-  author =	 "Ma, Xuezhe and Zhou, Chunting and Li, Xian and Neubig, Graham
-                  and Hovy, Eduard",
-  booktitle =	 "Proceedings of the 2019 Conference on Empirical Methods in
-                  Natural Language Processing and the 9th International Joint
-                  Conference on Natural Language Processing (EMNLP-IJCNLP)",
-  month =	 nov,
-  year =	 "2019",
-  address =	 "Hong Kong, China",
-  publisher =	 "Association for Computational Linguistics",
-  url =		 "https://www.aclweb.org/anthology/D19-1437",
-  doi =		 "10.18653/v1/D19-1437",
-  pages =	 "4282--4292",
-  abstract =	 "Most sequence-to-sequence (seq2seq) models are autoregressive;
-                  they generate each token by conditioning on previously
-                  generated tokens. In contrast, non-autoregressive seq2seq
-                  models generate all tokens in one pass, which leads to
-                  increased efficiency through parallel processing on hardware
-                  such as GPUs. However, directly modeling the joint
-                  distribution of all tokens simultaneously is challenging, and
-                  even with increasingly complex model structures accuracy lags
-                  significantly behind autoregressive models. In this paper, we
-                  propose a simple, efficient, and effective model for
-                  non-autoregressive sequence generation using latent variable
-                  models. Specifically, we turn to generative flow, an elegant
-                  technique to model complex distributions using neural
-                  networks, and design several layers of flow tailored for
-                  modeling the conditional density of sequential latent
-                  variables. We evaluate this model on three neural machine
-                  translation (NMT) benchmark datasets, achieving comparable
-                  performance with state-of-the-art non-autoregressive NMT
-                  models and almost constant decoding time w.r.t the sequence
-                  length.",
-}
 
 @inproceedings{sun2019fast,
   author =	 {Sun, Zhiqing and Li, Zhuohan and Wang, Haoqing and He, Di and
@@ -493,40 +443,6 @@ author={
                   than previously proposed non-autogregressive translation.}
 }
 
-@inproceedings{saharia2020nonautoregressive,
-  title =	 "Non-Autoregressive Machine Translation with Latent Alignments",
-  author =	 "Saharia, Chitwan and Chan, William and Saxena, Saurabh and
-                  Norouzi, Mohammad",
-  booktitle =	 "Proceedings of the 2020 Conference on Empirical Methods in
-                  Natural Language Processing (EMNLP)",
-  month =	 nov,
-  year =	 "2020",
-  address =	 "Online",
-  publisher =	 "Association for Computational Linguistics",
-  url =		 "https://www.aclweb.org/anthology/2020.emnlp-main.83",
-  doi =		 "10.18653/v1/2020.emnlp-main.83",
-  pages =	 "1098--1108",
-  abstract =	 "This paper presents two strong methods, CTC and Imputer, for
-                  non-autoregressive machine translation that model latent
-                  alignments with dynamic programming. We revisit CTC for
-                  machine translation and demonstrate that a simple CTC model
-                  can achieve state-of-the-art for single-step
-                  non-autoregressive machine translation, contrary to what prior
-                  work indicates. In addition, we adapt the Imputer model for
-                  non-autoregressive machine translation and demonstrate that
-                  Imputer with just 4 generation steps can match the performance
-                  of an autoregressive Transformer baseline. Our latent
-                  alignment models are simpler than many existing
-                  non-autoregressive translation baselines; for example, we do
-                  not require target length prediction or re-scoring with an
-                  autoregressive model. On the competitive WMT{'}14
-                  En$\rightarrow$De task, our CTC model achieves 25.7 BLEU with
-                  a single generation step, while Imputer achieves 27.5 BLEU
-                  with 2 generation steps, and 28.0 BLEU with 4 generation
-                  steps. This compares favourably to the autoregressive
-                  Transformer baseline at 27.8 BLEU.",
-}
-
 @InProceedings{chan2020imputer,
   title =	 {Imputer: Sequence Modelling via Imputation and Dynamic
                   Programming},
@@ -595,7 +511,7 @@ author={
                   reducing decoding time on average.}
 }
 
-@article{ghazvininejad2020semiautoregressive,
+@article{ghazvininejad-etal-2020-semiautoregressive,
   title =	 {Semi-Autoregressive Training Improves Mask-Predict Decoding},
   author =	 {Marjan Ghazvininejad and Omer Levy and Luke Zettlemoyer},
   journal =	 {ArXiv},
@@ -640,7 +556,7 @@ author={
   pages =	 {8846-8853}
 }
 
-@article{chan2019kermit,
+@article{chan-etal-2019-kermit,
   author =	 {William Chan and Nikita Kitaev and Kelvin Guu and Mitchell
                   Stern and Jakob Uszkoreit},
   title =	 {{KERMIT:} Generative Insertion-Based Modeling for Sequences},
@@ -655,7 +571,7 @@ author={
   bibsource =	 {dblp computer science bibliography, https://dblp.org}
 }
 
-@inproceedings{gu2019levenshtein,
+@inproceedings{gu-etal-2019-levenshtein,
   author =	 {Gu, Jiatao and Wang, Changhan and Zhao, Junbo},
   booktitle =	 {Advances in Neural Information Processing Systems},
   editor =	 {H. Wallach and H. Larochelle and A. Beygelzimer and
@@ -686,7 +602,7 @@ author={
 }
 
 
-@InProceedings{stern2019insertion,
+@InProceedings{stern-etal-2019-insertion,
   title =	 {Insertion Transformer: Flexible Sequence Generation via
                   Insertion Operations},
   author =	 {Stern, Mitchell and Chan, William and Kiros, Jamie and
@@ -727,21 +643,6 @@ author={
                   decoding.}
 }
 
-
-@inproceedings{barone2017deep,
-  title =	 "Deep architectures for Neural Machine Translation",
-  author =	 "Miceli Barone, Antonio Valerio and Helcl, Jind{\v{r}}ich and
-                  Sennrich, Rico and Haddow, Barry and Birch, Alexandra",
-  booktitle =	 "Proceedings of the Second Conference on Machine Translation",
-  month =	 sep,
-  year =	 2017,
-  address =	 "Copenhagen, Denmark",
-  publisher =	 "Association for Computational Linguistics",
-  url =		 "https://www.aclweb.org/anthology/W17-4710",
-  doi =		 "10.18653/v1/W17-4710",
-  pages =	 "99--107",
-}
-
 @inproceedings{gu2017nonautoregressive,
   author =	 {Jiatao Gu and James Bradbury and Caiming Xiong and Victor
                   O. K. Li and Richard Socher},
@@ -753,37 +654,6 @@ author={
   year =	 2018,
   url =		 {https://openreview.net/forum?id=B1l8BtlCb},
   timestamp =	 {Thu, 25 Jul 2019 14:25:57 +0200},
-}
-
-@inproceedings{lee2018deterministic,
-  author =	 {Lee, Jason and Mansimov, Elman and Cho, Kyunghyun},
-  title =	 {Deterministic Non-Autoregressive Neural Sequence Modeling by
-                  Iterative Refinement},
-  booktitle =	 {Proceedings of the 2018 Conference on Empirical Methods in
-                  Natural Language Processing},
-  address =	 {Brussels, Belgium},
-  month =	 {November},
-  pages =	 {1173--1182},
-  publisher =	 {Association for Computational Linguistics},
-  url =		 {http://www.aclweb.org/anthology/D18-1149},
-  year =	 2018
-}
-
-@inproceedings{ghazvininejad2019mask,
-  title =	 "Mask-Predict: Parallel Decoding of Conditional Masked Language
-                  Models",
-  author =	 "Ghazvininejad, Marjan and Levy, Omer and Liu, Yinhan and
-                  Zettlemoyer, Luke",
-  booktitle =	 "Proceedings of the 2019 Conference on Empirical Methods in
-                  Natural Language Processing and the 9th International Joint
-                  Conference on Natural Language Processing (EMNLP-IJCNLP)",
-  month =	 nov,
-  year =	 2019,
-  address =	 "Hong Kong, China",
-  publisher =	 "Association for Computational Linguistics",
-  url =		 "https://www.aclweb.org/anthology/D19-1633",
-  doi =		 "10.18653/v1/D19-1633",
-  pages =	 "6111--6120",
 }
 
 @article{mansimov2019generalized,
@@ -822,24 +692,6 @@ author={
                   MT systems (which is what it was originally proposed for), but
                   does not support using BLEU outside of MT, for evaluation of
                   individual texts, or for scientific hypothesis testing. }
-}
-
-@inproceedings{jean2015using,
-  title =	 "On Using Very Large Target Vocabulary for Neural Machine
-                  Translation",
-  author =	 "Jean, S{\'e}bastien and Cho, Kyunghyun and Memisevic, Roland
-                  and Bengio, Yoshua",
-  booktitle =	 "Proceedings of the 53rd Annual Meeting of the Association for
-                  Computational Linguistics and the 7th International Joint
-                  Conference on Natural Language Processing (Volume 1: Long
-                  Papers)",
-  month =	 jul,
-  year =	 2015,
-  address =	 "Beijing, China",
-  publisher =	 "Association for Computational Linguistics",
-  url =		 "https://www.aclweb.org/anthology/P15-1001",
-  doi =		 "10.3115/v1/P15-1001",
-  pages =	 "1--10",
 }
 
 @inproceedings{mikolov-etal-2013-distributed,
@@ -911,35 +763,6 @@ author={
   year =	 2013
 }
 
-@inproceedings{cho2014gru,
-  author =	 {Cho, Kyunghyun and Merrienboer, Bart van and Bahdanau, Dzmitry
-                  and Bengio, Yoshua},
-  title =	 {On the Properties of Neural Machine Translation:
-                  Encoder--Decoder Approaches},
-  booktitle =	 {Proceedings of SSST-8, Eighth Workshop on Syntax, Semantics
-                  and Structure in Statistical Translation},
-  address =	 {Doha, Qatar},
-  month =	 {October},
-  pages =	 {103--111},
-  publisher =	 {Association for Computational Linguistics},
-  year =	 2014
-}
-
-@inproceedings{cho2014learning,
-  author =	 {Cho, Kyunghyun and Merrienboer, Bart van and Gulcehre, Caglar
-                  and Bahdanau, Dzmitry and Bougares, Fethi and Schwenk, Holger
-                  and Bengio, Yoshua},
-  title =	 {Learning Phrase Representations using RNN Encoder--Decoder for
-                  Statistical Machine Translation},
-  booktitle =	 {Proceedings of the 2014 Conference on Empirical Methods in
-                  Natural Language Processing ({EMNLP})},
-  address =	 {Doha, Qatar},
-  month =	 {October},
-  pages =	 {1724--1734},
-  publisher =	 {Association for Computational Linguistics},
-  year =	 2014
-}
-
 @article{conneau2017supervised,
   author =	 {Conneau, Alexis and Kiela, Douwe and Schwenk, Holger and
                   Barrault, Lo\"{i}c and Bordes, Antoine},
@@ -977,19 +800,6 @@ author={
   pages =	 {1699--1704},
   publisher =	 {European Language Resources Association (ELRA)},
   year =	 2018
-}
-
-@inproceedings{denkowski2011meteor,
-  author =	 {Denkowski, Michael and Lavie, Alon},
-  title =	 {Meteor 1.3: {A}utomatic Metric for Reliable Optimization and
-                  Evaluation of Machine Translation Systems},
-  booktitle =	 {Proceedings of the Sixth Workshop on Statistical Machine
-                  Translation},
-  address =	 {Edinburgh, United Kingdom},
-  month =	 {July},
-  pages =	 {85--91},
-  publisher =	 {Association for Computational Linguistics},
-  year =	 2011
 }
 
 @article{elman1990finding,
